Service & contact no longer aligned to the bottom. Users can now scroll through menu's on mobile.

--- a/aegon-sass-library/layout/sidebars/_menu_desktop.scss
+++ b/aegon-sass-library/layout/sidebars/_menu_desktop.scss
@@ -4,6 +4,9 @@
 // --------------------------------------------------
 
 aside.desktop {
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
   display: none;
   @include rem('width', 170);
   background: $blue;
@@ -251,7 +254,8 @@ aside.desktop {
    * Stick Bottom
    */
   li.stick-bottom {
-    position: absolute;
+    position: relative;
+
     left: 0;
     bottom: 0;
     z-index: 2;
@@ -266,7 +270,7 @@ aside.desktop {
       background-color: #2981B8;
       color: $white;
       &[class*="icon-"]:before {
-        @include rem('line-height', 110);
+        @include rem('line-height', 105);
       }
     }
   }
